--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "homepage": "https://github.com/jacob-meacham/cannon-fire#readme",
   "devDependencies": {
     "jspm": "^0.16.15",
-    "jspm-server": "^1.0.1"
+    "jspm-server": "^1.0.1",
+    "babel-eslint": "^4.1.5",
+    "eslint": "^1.9.0",
+    "eslint-config-defaults": "^7.1.1",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-standard": "^1.3.1"
   },
   "jspm": {
     "dependencies": {
