--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
   },
   "homepage": "https://github.com/jacob-meacham/cannon-fire#readme",
   "devDependencies": {
-    "jspm": "^0.16.15",
-    "jspm-server": "^1.0.1",
-    "babel-eslint": "^4.1.5",
-    "eslint": "^1.9.0",
-    "eslint-config-defaults": "^7.1.1",
-    "eslint-config-standard": "^4.4.0",
-    "eslint-plugin-standard": "^1.3.1"
+    "babel-eslint": "4.1.5",
+    "eslint": "1.9.0",
+    "eslint-config-defaults": "7.1.1",
+    "eslint-config-standard": "4.4.0",
+    "eslint-plugin-standard": "1.3.1",
+    "jspm": "0.16.15",
+    "jspm-server": "1.0.1"
   },
   "jspm": {
     "dependencies": {
-      "soundcloud/soundcloud-javascript": "github:soundcloud/soundcloud-javascript@^0.1.0",
-      "three": "npm:three@^0.73.0"
+      "soundcloud/soundcloud-javascript": "github:soundcloud/soundcloud-javascript@0.1.0",
+      "three": "npm:three@0.73.0"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
+      "babel": "npm:babel-core@5.8.24",
+      "babel-runtime": "npm:babel-runtime@5.8.24",
+      "core-js": "npm:core-js@1.1.4"
     }
   }
 }
