--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "audioreactive visualization with cartoon smoke",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "jspm-server"
+    "clean": "rimraf dist",
+    "serve": "jspm-server . --only-exts='.js, .html, .css'",
+    "build": "jspm bundle lib/scene dist/package.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
     "eslint-config-standard": "4.4.0",
     "eslint-plugin-standard": "1.3.1",
     "jspm": "0.16.15",
-    "jspm-server": "1.0.1"
+    "jspm-server": "1.0.1",
+    "rimraf": "2.4.4"
   },
   "jspm": {
     "dependencies": {
