--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "jspm": {
     "dependencies": {
       "dataarts/dat.gui": "github:dataarts/dat.gui@^0.5.1",
+      "hughsk/three-effectcomposer": "github:hughsk/three-effectcomposer@master",
       "mrdoob/stats.js": "github:mrdoob/stats.js@master",
       "soundcloud/soundcloud-javascript": "github:soundcloud/soundcloud-javascript@0.1.0",
       "three": "npm:three@0.73.0"
