--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "hughsk/three-effectcomposer": "github:hughsk/three-effectcomposer@master",
       "mrdoob/stats.js": "github:mrdoob/stats.js@master",
       "soundcloud/soundcloud-javascript": "github:soundcloud/soundcloud-javascript@0.1.0",
-      "three": "npm:three@0.73.0"
+      "three": "npm:three@0.73.0",
+      "three-vignette-background": "npm:three-vignette-background@^1.0.2"
     },
     "devDependencies": {
       "babel": "npm:babel-core@5.8.24",
